<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.bigkoo.convenientbanner.ConvenientBanner
            android:id="@+id/banner1_viewpage"
            android:layout_width="match_parent"
            android:layout_height="220dp">
        </com.bigkoo.convenientbanner.ConvenientBanner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:id="@+id/fucheng"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@mipmap/tit26"
                    android:layout_width="55dp"
                    android:layout_height="55dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="辅诚"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mendian"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@mipmap/tit27"
                    android:layout_width="55dp"
                    android:layout_height="55dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="门店"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/jinrong"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@mipmap/tit28"
                    android:layout_width="55dp"
                    android:layout_height="55dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="金融"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginRight="10dp"
                android:id="@+id/hezuo"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@mipmap/tit29"
                    android:layout_width="55dp"
                    android:layout_height="55dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="合作"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/tit12"
                android:layout_width="17dp"
                android:layout_height="17dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="热门推荐"
                android:textSize="18dp"
                android:textColor="@color/blue_h"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/bj"
            android:layout_width="match_parent"
            android:layout_height="1dp"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/include_price"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/include_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/include_brand"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/include_image"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/include_showimage"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/tit12"
                android:layout_width="17dp"
                android:layout_height="17dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="辅诚"
                android:textSize="18dp"
                android:textColor="@color/blue_h"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/bj"
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </LinearLayout>

        <com.bigkoo.convenientbanner.ConvenientBanner
            android:id="@+id/banner2_viewpage"
            android:layout_width="match_parent"
            android:layout_height="220dp">

        </com.bigkoo.convenientbanner.ConvenientBanner>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/tit12"
                android:layout_width="17dp"
                android:layout_height="17dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我们的承诺"
                android:textSize="18dp"
                android:textColor="@color/blue_h"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="260dp">
            <LinearLayout
                android:layout_marginTop="15dp"
                android:background="@color/bj"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/one_title"
                            android:textSize="16dp"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="0dp" />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/one_message"
                            android:layout_width="match_parent"
                            android:layout_weight="3"
                            android:layout_height="0dp" />
                    </LinearLayout>
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@mipmap/tit30"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/hui"
                    android:layout_width="1dp"
                    android:layout_height="100dp"></LinearLayout>
                <LinearLayout
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/two_title"
                            android:textSize="16dp"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="0dp" />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/two_message"
                            android:layout_width="match_parent"
                            android:layout_weight="3"
                            android:layout_height="0dp" />
                    </LinearLayout>
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@mipmap/tit31"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@color/hui"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/three_title"
                            android:textSize="16dp"
                            android:layout_width="match_parent"
                            android:layout_weight="2"
                            android:layout_height="0dp" />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/three_message"
                            android:layout_width="match_parent"
                            android:layout_weight="3"
                            android:layout_height="0dp" />
                    </LinearLayout>
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@mipmap/tit32"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/hui"
                    android:layout_width="1dp"
                    android:layout_height="100dp"></LinearLayout>
                <LinearLayout
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/telephone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/four_title"
                            android:textSize="16dp"
                            android:layout_width="match_parent"
                            android:layout_weight="2"
                            android:layout_height="0dp" />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:text="@string/four_message"
                            android:textColor="@color/red"
                            android:layout_width="match_parent"
                            android:layout_weight="3"
                            android:layout_height="0dp" />
                    </LinearLayout>
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@mipmap/tit33"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>